2014-01-15  Richard Biener  <rguenther@suse.de>

PR tree-optimization/59822
	* tree-vect-stmts.c (hoist_defs_of_uses): New function.
	(vectorizable_load): Use it to hoist defs of uses of invariant
	loads out of the loop.

	* g++.dg/torture/pr59822.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@206630 138bc75d-0d04-0410-961f-82ee72b054a4